--- a/web/app/themes/byggtekniktheme/sass/partials/_header.scss
+++ b/web/app/themes/byggtekniktheme/sass/partials/_header.scss
@@ -11,7 +11,7 @@
 
     .header-title a
     {
-        color: white;
+        color: black;
         text-decoration: none;
         font-weight: 700;
     }
