--- a/web/app/themes/byggtekniktheme/sass/style.css
+++ b/web/app/themes/byggtekniktheme/sass/style.css
@@ -6,7 +6,7 @@
   padding-top: 1rem;
 }
 .site-header .header-title a {
-  color: white;
+  color: black;
   text-decoration: none;
   font-weight: 700;
 }
