--- a/web/app/themes/midgardstheme/sass/partials/_frontpage.scss
+++ b/web/app/themes/midgardstheme/sass/partials/_frontpage.scss
@@ -18,4 +18,10 @@
     text-align: center;
     color: white;
     width: 100%;
+
+    p a
+    {
+        text-decoration: none;
+        color: white;
+    }
 }
