--- a/web/app/themes/midgardstheme/sass/style.css
+++ b/web/app/themes/midgardstheme/sass/style.css
@@ -531,6 +531,10 @@ div.summary .product_title {
   color: white;
   width: 100%;
 }
+.frontpage-cont p a {
+  text-decoration: none;
+  color: white;
+}
 
 .site-footer {
   display: grid;
